compiler/tests/fixtures/invalid/semantics/reaction_queues_undefined_action.viv
// Invalid: reaction queues undefined action

action trigger:
    roles:
        @actor:
            as: initiator
    reactions:
        queue action nonexistent:
            with none:
